# local-backend

./: Makefile  go.mod  go.sum
cmd/: main.go
local/test-api/: pyproject.toml
local/test-api/test_api/: __main__.py  api.py
migrations/: 000001_init.down.sql  000001_init.up.sql  20211103003755_init.sql
pkg/: types.go
pkg/database/: collections.go  database.go  models.go  requests.go  utils.go
pkg/models/: collections.go  database.go  http.go  types.go
pkg/service/: error.go  handler.go  make_request.go  request.go  response.go  service.go
pkg/service/collections/: router.go
pkg/service/collections/handlers/: create_collection.go  delete_collection.go  list_collections.go  update_collection.go
pkg/service/requests/: create_request.go  delete_request.go  get_history.go  get_request.go  list_request.go  make_request.go  router.go  update_request.go
pkg/service/requests/handlers/: create_request.go  delete_request.go  get_history.go  get_request.go  list_request.go  make_request.go  update_request.go
pkg/swagger/: swagger.go  swagger_test.go
