[tool.poetry]
name = "test-api"
version = "0.1.0"
description = ""
authors = ["Maxim Vasilev <Maxim.Vasilev@jetbrains.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.2"
Flask-RESTful = "^0.3.9"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
